--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 Package: it.dreamcode.ft
 Name: FingerTouch (Beta)
-Depends: mobilesubstrate
+Depends: mobilesubstrate, preferenceloader
 Version: 0.0.4
 Architecture: iphoneos-arm
 Description: Touch ID gestures
