--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 Package: it.dreamcode.ft
-Name: FingerTouch (Beta)
-Depends: mobilesubstrate, preferenceloader
+Name: FingerTouch
+Depends: mobilesubstrate, preferenceloader, firmware (>= 10.0)
 Version: 0.0.4
 Architecture: iphoneos-arm
 Description: Touch ID gestures
